:bug: fix: Not sending jwt